# Connect-ws-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: core_logic.py  main.py
src/api/: crud.py  exceptions.py  fields.py  models.py  shortcuts.py  validators.py  views.py  websockets.py
src/application/: settings.py
src/db/: client.py  utils.py
tests/: core_test.py
